<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/background_light">

    <ImageView
        android:id="@+id/ivAmazon"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/amazon"
        android:contentDescription="@string/amazon" />

    <View
        android:id="@+id/vLine1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/ivAmazon"/>

    <TextView
        android:id="@+id/tvTitleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@id/vLine1"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf ="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSignIn"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/forgot_password"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvSignIn"
        app:layout_constraintBottom_toBottomOf="@id/tvSignIn"/>

    <EditText
        android:id="@+id/edtEmailPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email_phone_for_mobile_accounts"
        android:inputType="textEmailAddress|phone"
        android:background="@drawable/border_bg"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/edtEmailPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/amazon_password"
        android:inputType="textPassword"
        android:background="@drawable/border_bg"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/chkShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        android:text="@string/show_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="4dp"
        android:checked="true"/>

    <CheckBox
        android:id="@+id/chkKeepMeSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chkShowPassword"
        android:text="@string/keep_me_signed_in"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="@id/chkKeepMeSignIn"
        app:layout_constraintBottom_toBottomOf="@id/chkKeepMeSignIn"
        app:layout_constraintStart_toEndOf="@id/chkKeepMeSignIn"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/chkKeepMeSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:background="@drawable/border_bg"/>

    <TextView
        android:id="@+id/tvNewToAmazon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_to_amazon"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@id/tvNewToAmazon"
        app:layout_constraintBottom_toBottomOf="@id/tvNewToAmazon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"/>

    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@id/tvNewToAmazon"
        app:layout_constraintBottom_toBottomOf="@id/tvNewToAmazon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/btnCreateNewAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:padding="12dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/border_bg"
        app:layout_constraintTop_toBottomOf="@id/tvNewToAmazon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/tvTermCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conditions_of_use_privacy_notice"
        android:textColor="@android:color/holo_blue_dark"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/btnCreateNewAcc"
        android:layout_margin="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_1996_2017_amazon_com_inc_or_its_affiliates"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvTermCondition"/>


</androidx.constraintlayout.widget.ConstraintLayout>